FrostWire 2.2.6 build 666 - NOV/20/2020
 - com.mopub:mopub-sdk*:5.14.0 -> 5.15.0
 - com.mopub.mediation:applovin:9.14.3.0 -> 9.14.8.0
 - com.unity3d.ads:unity-ads:3.4.6 -> 3.5.1
 - androidx.browser:browser: 1.3.0-alpha06 -> 1.3.0-rc01
 - dev:com.android.tools.build:gradle:4.1.0 -> 4.1.1
 - dev:com.google.firebase:firebase-crashlytics-gradle:2.3.0 -> 2.4.1

FrostWire 2.2.5 build 665 - NOV/18/2020
 - New: TorrentParadise search source
 - New: GloTorrents search source
 - New: Firebase Crash Analytics support
 - Yify search fixed
 - Torrentz2 search fixed
 - MagnetDL search fixed
 - Soundcloud search fixed
 - EZTV search fixed
 - Fixed archive.org connection dropped/timeout error
 - Privacy updates
 - com.google.android.gms:play-services-ads 19.4.0 -> 19.5.0
 - com.mopub:mopub-sdk-banner:5.12.0 -> 5.14.0
 - com.applovin:applovin-sdk:9.13.1 -> 9.14.5
 - com.mopub.mediation:applovin:9.13.1.0 -> 9.14.3.0
 - material 1.3.0-alpha02 -> 1.3.0-alpha03
 - browser 1.3.0-alpha05 -> 1.3.0->alpha06
 - exifinterface 1.2.0 -> 1.3.1
 - play-services 19.3.0 -> 19.4.0
 - core-ktx 1.3.1 -> 1.3.2
 - com.android.tools.build:gradle:4.0.1 -> 4.1.0
 - gradle wrapper update 6.1.1->6.6.1

FrostWire 2.2.4 build 654 - SEP/24/2020
 - New jlibtorrent 1.2.10.0 update
 - Fixes bug where frostclick promo slide would render twice
 - dev: buildToolsVersion '29.0.2' -> '29.0.3' (@TacoTheDank)
 - Archive search Json parsing deprecation fix (@TacoTheDank)
 - com.squareup.okhttp3:okhttp:4.8.1 -> 4.9.0
 - lt: improve stat_file() performance on Windows
 - lt: fix issue with loading invalid torrents with only 0-sized files
 - lt: fix to avoid large stack allocations
 - lt: add macro TORRENT_CXX11_ABI for clients building with C++14 against
   libtorrent build with C++11
 - lt: removed deprecated wstring overloads on non-windows systems
 - lt: drop dependency on Unicode's ConvertUTF code (which had a license
   incompatible with Debian)
 - lt: fix bugs exposed on big-endian systems`